# osmosis_language_learning

./: .env.example  .gitignore  .pre-commit-config.yaml  AUTH_REDIRECT_CHANGES.md  README.md  architecture.md  commune_payment.md  dev.docker-compose.yaml  docker-compose.yaml  grammar-plan.md  idea.md  soul.md  todo.md
.github/workflows/: build.yaml
.tools/: compose-up.sh  dev.sh  migrate.sh  resetdb.sh  test.sh
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/.tools/: run_tests.sh
backend/alembic/versions/: bc2c99d5a8e8_initial.py
backend/app/: auth.py  config.py  database.py  dependencies.py  main.py  models.py  plugins.py  schemas.py
backend/app/llm/: __init__.py  prompt_loader.py
backend/app/llm/providers/: groq.py  lemonfox.py  openai.py  openrouter.py
backend/app/prompts/: card_evaluation.prompt  onboarding.prompt  summarization.prompt  summarization_incremental.prompt  system.prompt
backend/app/routers/: auth.py  billing.py  cats.py  chat.py  communes.py  goals.py  instant_assistant.py  notifications.py  srs.py  users.py  version.py
backend/app/services/: auth_service.py  billing_service.py  cat_service.py  chat_service.py  commune_service.py  goal_import_service.py  goal_service.py  llm_service.py  notification_service.py  srs_service.py  summarization_service.py
backend/app/templates/: onboarding.jinja  review.jinja  system.jinja
backend/app/tools/: definitions.py  executor.py
backend/tests/: conftest.py  test_models.py  test_plugins.py  test_schemas.py  test_service_cat.py  test_service_goal.py  test_service_goal_import.py  test_service_srs.py
frontend/: index.html
tools/: increment_version.sh  test.sh
(+10 files in other folders)
